[package]
name = "iridium-client"
version = "0.1.0"
authors = ["Gianni Crivello <gianni@iridium.software>"]
description = "An Iridium client library written in Rust"
license = "MIT"
repository = "https://github.com/IridiumIdentity/iridium"
edition = "2021"


[dependencies]
hex = "0.4"
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
base64 = "0.13"
sha2 = "0.9"
digest = "0.9"
dotenvy = "0.15.7"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]